Changed formatting on navBar and created runAnalysis.py

--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #eeeeee;
+  background-color: #B0A8A7;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
